Fixed overlapping issue with overflows

--- a/week-1/assets/style.css
+++ b/week-1/assets/style.css
@@ -19,6 +19,7 @@
 header {
     width: 100%;
     background-color: var(--primary-color);
+    overflow: hidden;
 }
 
 body{
@@ -132,6 +133,8 @@ p {
     width: 100%;
 }
 
+
+
 .profile h2 {
     background-color: var(--primary-color);
     
@@ -152,6 +155,7 @@ p {
     border-radius: 50%;
     object-fit: cover;
     perspective: 1000px;
+    overflow: hidden;
 }
 
 .flip-card-inner {
@@ -197,6 +201,7 @@ p {
     object-fit: cover;
     border: 4px solid var(--secondary-color);
     box-shadow: rgba(0,0,0,0.5) 2px 4px 6px;
+    overflow: hidden;
 }
 
 .div-header {
@@ -216,7 +221,8 @@ p {
 .section-splitter {
     display: flex;
     justify-content: space-evenly;
-    width: 100%;
+    align-items: center;
+    height: fit-content;
 }
 
 .bio .divider {
@@ -224,7 +230,8 @@ p {
     border: solid 2px var(--secondary-color);
     border-radius: 10px;
     width:50%;
-    height: 120px;
+    height: 150px;
+    overflow: scroll;
     margin:10px;
     align-content: center;
     box-shadow: rgba(0,0,0,0.5) 2px 4px 6px;
@@ -235,8 +242,8 @@ p {
     border: solid 2px var(--secondary-color);
     border-radius: 10px;
     width:fit-content;
-    height:fit-content;
-    padding: 10px;
+    height:100%;
+    padding: auto;
     margin:auto;
     align-content: center;
     box-shadow: rgba(0,0,0,0.5) 2px 4px 6px;
@@ -281,16 +288,19 @@ p {
     display: inline-flex;
     justify-content: space-evenly;
     gap: 20px;
+    padding-top: 20px;
 }
 
 .project {
     width: 50%;
+    height: 400px;
     align-content: center;
     justify-content: center;
     border: solid 2px var(--secondary-color);
     border-radius: 5px;
     background-color: #ffffff;
     box-shadow: rgba(0,0,0,0.5) 2px 4px 6px;
+    overflow: hidden;
 }
 
 .project:hover {
@@ -302,7 +312,8 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px;
+    padding: 0px;
+    overflow: hidden;
 }
 
 .project-picture {
@@ -313,13 +324,17 @@ p {
     border: 4px solid var(--secondary-color);
     box-shadow: rgba(0,0,0,0.5) 2px 4px 6px;
     border-radius: 5px;
+    overflow: hidden;
 }
 
 .project-list {
     list-style-type: disc;
-    padding: 20px 40px 20px 40px;
+    padding-left: 20px;
     text-align: left;
+    overflow: hidden;
 }
+
+
 
 
 
